# minifsm

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: linux.yml  macos.yml
include/fsm/: dsl.hpp  event.hpp  fsm.hpp  state.hpp  statemachine.hpp  substitutes.hpp  transition_table.hpp  typelist.hpp  types.hpp
include/fsm/detail/: binder.hpp  integer_sequence.hpp  mem_fun_invoker.hpp  meta.hpp  stateholder.hpp  statemachine.hpp  transition_table.hpp  transitions.hpp  tuple.hpp  type_utils.hpp  typelist.hpp  visitors.hpp
tests/: CMakeLists.txt  state_machine_tests.cpp  transition_table_tests.cpp  transitions_tests.cpp  tuple_tests.cpp  typelist_tests.cpp
tools/: generate_single_header.py
